--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
         "barryvdh/laravel-dompdf": "^0.8.5",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "~1.0",
-        "maddhatter/laravel-fullcalendar": "^1.3"
+        "maddhatter/laravel-fullcalendar": "^1.3",
+        "jjsquady/mikrotikapi": "dev-master",
+        "laravel/tinker": "^1.0",
+        "pear2/net_routeros": "1.0.0b5",
+        "pear2/net_transmitter": "1.0.0a5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -22,6 +25,8 @@
             "database"
         ],
         "psr-4": {
+            "jjsquady\\MikrotikApi\\": "src/",
+            "jjsquady\\MikrotikApi\\Tests\\": "tests/",
             "App\\": "app/"
         }
     },
@@ -50,5 +55,15 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "jjsquady\\MikrotikApi\\MikrotikServiceProvider"
+            ],
+            "aliases": {
+                "Mikrotik": "jjsquady\\MikrotikApi\\Facades\\MikrotikFacade"
+            }
+        }
     }
 }
